@@ -33,7 +33,8 @@
 <div class=navigation lang=en>
 [List files by <a href="schema/list/uri.html">URI</a>,
 <a href="schema/list/pubid.html">Public ID</a>,
-<a href="schema/list/editor.html">Editor</a>]
+<a href="schema/list/editor.html">Editor</a>,
+<a href="schema/list/tag.html">Tag</a>]
 [<a href="schema-add">Add file</a>]
 </div>
 
